# divamodarchive

./: Cargo.toml  askama.toml  rustfmt.toml
migrations/: 009_labels.sql  010_updates.sql  011_explicit.sql  012_dependency.sql  013_filesize.sql  014_game.sql
src/: api.rs  main.rs  models.rs  rss.rs  sitemap.rs  web.rs
src/api/: ids.rs  posts.rs
templates/: about.html  base.html  cos_spreadsheet.html  cstm_item_helpers.html  cstm_item_spreadsheet.html  cstm_items.html  db_spreadsheet.html  edit.html  error.html  liked.html  module_helpers.html  module_spreadsheet.html  modules.html  post.html  post_helpers.html  pv_helpers.html  pv_spreadsheet.html  pvs.html  report.html  reserve.html  search.html  settings.html  upload.html  user.html  user_reservations.html
