[package]
name = "divamodarchive2"
version = "1.0.0"
edition = "2024"

[dependencies]
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
axum_html_minifier = "1.0"
base64 = "0.22"
comrak = "0.39"
diva_db = { git = "https://github.com/vixen256/diva_db", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
itertools = "0.14"
jsonwebtoken = "9.3"
meilisearch-sdk = "0.29"
module_db = { git = "https://github.com/vixen256/module_db", features = ["utoipa"] }
pv_db = { git = "https://github.com/vixen256/pv_db", features = ["utoipa"] }
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab_tree = "0.3"
sqlx = { version = "0.8", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "time",
] }
temp-dir = "0.1"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["full"] }
url = "2.5"
utoipa = { version = "5.4", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
walkdir = "2.5"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
